--- a/package.json
+++ b/package.json
@@ -4,5 +4,16 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongoose": "^7.5.2"
-  }
+  },
+  "name": "just_paste_it2",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "start" : "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
